[package]
name = "{project:name}"
version = "0.1.0"
description = "{project:description}"
authors = ["{author:name} <{author:email}>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "thin"
opt-level = "s"
panic = "abort"
debug = false
